; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_callback_on_items_moved.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_callback_on_items_moved.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callback_ctx = type { i32 }
%struct.items_moved_report = type { i64, i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i64, i64, i8*)* @callback_on_items_moved to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @callback_on_items_moved(i32* %0, i64 %1, i64 %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.callback_ctx*, align 8
  %12 = alloca %struct.items_moved_report, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %13 = load i8*, i8** %10, align 8
  %14 = bitcast i8* %13 to %struct.callback_ctx*
  store %struct.callback_ctx* %14, %struct.callback_ctx** %11, align 8
  %15 = load i64, i64* %7, align 8
  %16 = getelementptr inbounds %struct.items_moved_report, %struct.items_moved_report* %12, i32 0, i32 0
  store i64 %15, i64* %16, align 8
  %17 = load i64, i64* %8, align 8
  %18 = getelementptr inbounds %struct.items_moved_report, %struct.items_moved_report* %12, i32 0, i32 1
  store i64 %17, i64* %18, align 8
  %19 = load i64, i64* %9, align 8
  %20 = getelementptr inbounds %struct.items_moved_report, %struct.items_moved_report* %12, i32 0, i32 2
  store i64 %19, i64* %20, align 8
  %21 = getelementptr inbounds %struct.items_moved_report, %struct.items_moved_report* %12, i32 0, i32 3
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @playlist_state_init(i32* %21, i32* %22)
  %24 = load %struct.callback_ctx*, %struct.callback_ctx** %11, align 8
  %25 = getelementptr inbounds %struct.callback_ctx, %struct.callback_ctx* %24, i32 0, i32 0
  %26 = call i32 @vlc_vector_push(i32* %25, %struct.items_moved_report* byval(%struct.items_moved_report) align 8 %12)
  ret void
}

declare dso_local i32 @playlist_state_init(i32*, i32*) #1

declare dso_local i32 @vlc_vector_push(i32*, %struct.items_moved_report* byval(%struct.items_moved_report) align 8) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
